Code cleanup & improve javadoc